changed date in schedule section

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <div class="day1">
                 <div class="schedulearrowc">
                     <h1>DAY 1</h1>
-                    <h3>5th March</h3>
+                    <h3>2nd March</h3>
                 </div>
                 <div class="schedule">
                     <div class="scheduleItem">
@@ -282,7 +282,7 @@
             <div class="day1">
                 <div class="schedulearrowc">
                     <h1>DAY 2</h1>
-                    <h3>6th March</h3>
+                    <h3>3rd March</h3>
                 </div>
                 <div class="schedule">
                     <div class="scheduleItem">
