--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="css/Muli.css" rel="stylesheet">
     <link href="css/Teko.css" rel="stylesheet">
     <link href="css/Poppins.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <!--Custom css-->
     <link rel="stylesheet" href="css/style.css">
