added google docs link

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <a href="#contact">Contact</a>
             </li>
         </div>
-        <div class="regBtn">
-            <button class="rbtn">Register</button>
+        <div class="regBtn" style="cursor: pointer;" onclick="location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSc2CMIsvVoZpxf7FUYS39SMnKyxGQwbD7RDIAappTLZXbXUGQ/viewform?usp=sf_link'">
+            <button class="rbtn" style="cursor: pointer;">Register</button>
         </div>
         <div class="burger">
             <div class="line1"></div>
@@ -159,11 +159,11 @@
         <br>
         <div class="slider">
             <li class="imgc" onclick="expandImage(this);">
-                <img src="img/portfolio-1.jpg" alt="Love Querying? Query a Database.<br/> Explore your Data retrieving ability with a quick test on SQL and Database awareness, also practical implementation and runnung of various queries in SQL.">
+                <img src="img/hack 3.jpg" alt="Love Querying? Query a Database.<br/> Explore your Data retrieving ability with a quick test on SQL and Database awareness, also practical implementation and runnung of various queries in SQL.">
                 <div class="imgtext">DIG-D-DATA</div>
             </li>
             <li class="imgc" onclick="expandImage(this);">
-                <img src="img/user_interface1.jpg" alt="Show the best of your skills to build the best user interface. Themes would be given on the spot">
+                <img src="img/user_interface.jpg" alt="Show the best of your skills to build the best user interface. Themes would be given on the spot">
                 <div class="imgtext">BEST USER INTERFACE</div>
             </li>
             <li class="imgc" onclick="expandImage(this);">
@@ -171,11 +171,7 @@
                 <div class="imgtext">HACK-D-CODE</div>
             </li>
             <li class="imgc" onclick="expandImage(this);">
-                <img src="img/portfolio-6.jpg" alt="Passwords are dirty socks. If left around they will create a stinky mess. Test your hacking skills by cracking passwords">
-                <div class="imgtext">CYBERWAR</div>
-            </li>
-            <li class="imgc" onclick="expandImage(this);">
-                <img src="img/portfolio-4.jpg" alt="Like Trivia?  Show your general awareness quotient at a general quiz on various topics like General IT, Science, Sports, Current Affairs and Entertainment and anything you can think of!">
+                <img src="img/quiz 1.jpg" alt="Like Trivia?  Show your general awareness quotient at a general quiz on various topics like General IT, Science, Sports, Current Affairs and Entertainment and anything you can think of!">
                 <div class="imgtext">QUEST-MANIA</div>
             </li>
             <li class="imgc" onclick="expandImage(this);">
@@ -187,11 +183,11 @@
                 <div class="imgtext">LAN GAMING</div>
             </li>
             <li class="imgc" onclick="expandImage(this);">
-                <img src="img/treasure hunt 3.jpg" alt="Hunt like Ethan Hunt and Sherlock Holmes - to find a hacker through written clues and various hints present in college premises and the Satya Niketan Market">
+                <img src="img/treasure hunt 1.jpg" alt="Hunt like Ethan Hunt and Sherlock Holmes - to find a hacker through written clues and various hints present in college premises and the Satya Niketan Market">
                 <div class="imgtext">TREASURE HUNT</div>
             </li>
             <li class="imgc" onclick="expandImage(this);">
-                <img src="img/portfolio-11.jpg" alt="One Dream! One Team!<br>Play with money, another agitating game of IPL auction where you can find every player under the hammer. Create the strongest team appertaining of your dream 7 players. ">
+                <img src="img/ipl 1.jpg" alt="One Dream! One Team!<br>Play with money, another agitating game of IPL auction where you can find every player under the hammer. Create the strongest team appertaining of your dream 7 players. ">
                 <div class="imgtext">IPL AUCTION</div>
             </li>
             <li class="imgc" onclick="expandImage(this);">
@@ -414,15 +410,15 @@
                     PHONE
                 </div>
                 <div>
-                    <p style="font-size: 14px;">1233456789</p>
+                    <p style="font-size: 14px;">9118338532</p>
                 </div>
             </div>
         </div>
         <br>
         <br>
         <div class="btncon">
-            <div class="bigbtnc">
-                <button class="bigbtn">Register Now</button>
+            <div class="bigbtnc" style="cursor: pointer;" onclick="location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSc2CMIsvVoZpxf7FUYS39SMnKyxGQwbD7RDIAappTLZXbXUGQ/viewform?usp=sf_link'">
+                <button class="bigbtn" style="cursor: pointer;">Register Now</button>
             </div>
         </div>
     </div>
