deleted faaltu images and ad mad ;  and added meme war

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <br>
             <div class="mainHeading animated fadeIn slow">संगणक-विमर्श</div>
         </div>
-        <div class="subHeading animated fadeIn slower"><span style="color: hotpink;">March 5-6,2020,</span>ARSDC</div>
+        <div class="subHeading animated fadeIn slower"><span style="color: hotpink;">March 2-3,2020,</span>ARSDC</div>
         <div class="time animated fadeIn slower">
             <div class="timec">
                 <div class="timevalue" id="days">00</div>
@@ -191,8 +191,8 @@
                 <div class="imgtext">IPL AUCTION</div>
             </li>
             <li class="imgc" onclick="expandImage(this);">
-                <img src="img/portfolio-8.jpg" alt="Show and fine tune your presentation and acting skills by directing and presenting an advertisement on the topic given.">
-                <div class="imgtext">AD MAD</div>
+                <img src="img/meme.jpg" alt="Modern Problem requires modern solutions.<br>If you love making memes, let's make memes then!">
+                <div class="imgtext">Meme War</div>
             </li>
         </div>
         <div class="largeimg">
