--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     </script>
 </head>
 <body>
+    <div class="preload">
+        <img class="preimage" src="img/logo1.png" alt="loader">
+    </div>
     <nav>
         <div class="logo">
             Sanganak Vimarsh
